Delete /newest endpoint.